change homepage link from package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage ":"./",
+  "homepage ":"http://MuhammadJumaa.github.io",
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
