--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "gh-pages": "^1.2.0",
     "redux-devtools-extension": "^2.13.5"
   },
-  "homepage": "http://MuhammadJumaa.github.io/robofriends"
+  "homepage": "https://MuhammadJumaa.github.io/robofriends"
 }
