--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "mpm": "0.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-lazyload": "^2.3.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
